--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -1,49 +1,23 @@
+// Шапка сайта
 .page-header {
   box-sizing: border-box;
-  background-color: #1f5fc0;
   min-height: 96px;
   width: 100%;
   padding-top: 20px;
   overflow: hidden;
-  @media (min-width: 1024px) {
-    height: 144px;
-    padding-top: 0;
- }
+  background-color: #1f5fc0;
 }
 
-.page-header__wrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  // justify-content: space-between;
-}
-
-.page-header__logo img {
-  width: 200px;
-  height: 27px;
-  cursor: pointer;
-
- @media (min-width: 425px) {
-  width: 249px;
-  height: 34px;
- }
-}
-
-@media (min-width: 767px) and (max-width: 1023px){
-  .page-header__logo img {
-    width: 200px;
-    height: 27px;
-  }
-}
 
 .page-header__info {
-  display: flex;
+  display: none;
   flex-direction: row;
   justify-content: flex-end;
   box-sizing: border-box;
   width: 100%;
   margin-bottom: 19px;
 }
+
 .page-header__info span {
   margin: 0;
   margin-left: 32px;
@@ -52,15 +26,32 @@
   color: #8acbf9;
 }
 
-@media (max-width: 1023px) {
- .page-header__info {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    border: 0;
-    clip: rect(0 0 0 0);
-    overflow: hidden;
- }
+.page-header__nav-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+.page-header__logo img {
+  width: 200px;
+  height: 27px;
+  cursor: pointer;
+}
+
+
+@media (min-width: 1024px) {
+  .page-header {
+    min-height: 144px;
+    padding-top: 0;
+  }
+
+  .page-header__info {
+    display: flex;
+  }
+
+  .page-header__logo img {
+    width: 249px;
+    height: 34px;
+  }
 }
