--- a/sass/scaffolding.scss
+++ b/sass/scaffolding.scss
@@ -1,22 +1,12 @@
-html {
-
-}
+// общие свойства
 body {
   background-color: #e7e7ef;
   font-family: 'Gotham Pro';
   font-weight: 300;
   font-style: normal;
 
-  min-width: 506px;
+  min-width: 320px;
 }
-
-	//  @media (min-width: 768px) {
-	//   width: 90%;
-	//  }
-
-	// @media (min-width: 1023px) {
-	// 	max-width: 1608px;
-	// }
 
 .visualy-hidden {
   position: absolute;
@@ -28,29 +18,61 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden; 
 }
+
 .container {
   box-sizing: border-box;
-  width: 95%;
+  width: 97%;
   margin: 0 auto;
   overflow: hidden;
+  max-width: 1600px;
 }
 
 main.container {
   display: flex;
-  position: relative;
-  top: -24px;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
+  position: relative;
+  width: 100%;
+  top: -24px;
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 506px) {
+  main.container {
+    width: 456px;
+  }
+}
+
+@media (min-width: 768px) {
+  main.container,
   .container {
-  width: 99%;
-  max-width: 1600px;
+    width: 97%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    width: 95%;
   }
 
   main.container {
-    flex-direction: row;
-    align-items: flex-start;
+    width: 950px;
   }
 }
+@media (min-width: 1280px) {
+  main.container {
+    display: block;
+  }
+  main.container,
+  .container {
+    width: 98%;
+  }
+}
+
+@media (min-width: 1440px) {
+  main.container,
+  .container {
+    width: 86%;
+  }
+}
+
