--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,12 +3,22 @@
 
 @import "scaffolding.scss";
 
-// @import "global/fonts.scss";
+@import "global/fonts.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/sidebar.scss";
 @import "blocks/content.scss";
 @import "blocks/banners.scss";
+@import "blocks/contact-form.scss";
+
+
+@import "blocks/table-exchange.scss";
+
+@import "blocks/info-exchange.scss";
+
+@import "blocks/access-page.scss";
+
+@import "blocks/faq.scss";
 
 
 @import "blocks/page-footer.scss";
